--- a/index.css
+++ b/index.css
@@ -8,3 +8,16 @@
 
     width: clamp(300px, 50%, 400px);
 }
+
+.parent {
+    height: 100px;
+    border: solid red;
+    padding: 10px;
+    width: 500px;
+}
+
+.child {
+    height: 50%;
+    background-color: blue;
+    width: 50%;
+}
