--- a/media.css
+++ b/media.css
@@ -7,3 +7,16 @@ h1 {
         font-size: 52px;
     }
 }
+
+@media  screen and (min-width: 900px) {
+    h1{
+    font-size: 76px;
+}
+}
+
+@media print {
+    h1 {
+      font-weight: lighter;  
+      Color: red;
+    }
+}
