--- a/media.css
+++ b/media.css
@@ -20,3 +20,16 @@ h1 {
       Color: red;
     }
 }
+
+@media (orientation: landscape) {
+    h1 {
+        background-color: red;
+    }
+}
+
+@media (orientation: portrait) {
+    h1 {
+        background-color: blue;
+    }
+}
+
